# Catch2-example

./: CMakeLists.txt  Makefile
include/: factorial.h
src/: factorial.cpp  main.cpp
tests/: test.cpp
